# IntelligentMonitoring

./: .replit  README.md  app.py  pyproject.toml  server.py
attached_assets/: Pasted-172-31-128-64-17-Mar-2025-10-37-08-GET-api-status-HTTP-1-1-200-172-31-128-64-17-Mar--1742207844515.txt  Pasted-2-31-128-98-17-Mar-2025-07-34-53-GET-api-status-HTTP-1-1-200-172-31-128-98-17-Mar-20-1742196932389.txt
data/: settings.json  urls.json
static/: index.html
utils/: article_processor.py  newsletter.py  podcast.py  scheduler.py  storage.py
