[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "openai>=1.66.3",
    "psycopg2-binary>=2.9.10",
    "schedule>=1.2.2",
    "trafilatura>=2.0.0",
]
